--- a/styles.css
+++ b/styles.css
@@ -185,7 +185,7 @@ body {
   position: absolute;
   z-index: -2;
   backdrop-filter: blur(200px);
-   -webkit-backdrop-filter: blur(200px);
+  -webkit-backdrop-filter: blur(200px);
 }
 
 @keyframes rotate {
@@ -240,7 +240,7 @@ header {
 
 .nav-links li {
   display: inline-block;
-  padding: 1rem;
+  padding-right: 1rem;
 }
 
 .underline {
@@ -273,7 +273,7 @@ header {
 }
 
 #home-content h1 {
-  margin-top: 10rem;
+  margin-top: 15rem;
 }
 
 h1 {
@@ -344,6 +344,16 @@ i:hover {
   width: 25rem;
   margin-top: 4rem;
   object-fit: cover;
+  animation: light-border 2s linear infinite;
+}
+
+@keyframes light-border {
+  0% {
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.4);
+  }
+  100% {
+    box-shadow: 0 0 0 25px rgba(255, 255, 255, 0);
+  }
 }
 
 .bold {
@@ -421,7 +431,7 @@ i:hover {
   bottom: 0;
   left: 0;
   background-color: #1b769c;
-  transform-origin: bottom left;
+  transform-origin: bottom right;
   transition: transform 0.25s ease-out;
 }
 
@@ -475,6 +485,28 @@ i:hover {
   transform-origin: bottom left;
 }
 
+.skills {
+  position: relative;
+}
+
+.skills::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: white;
+  transform-origin: bottom right;
+  transition: transform 0.5s ease-out;
+}
+
+.skills:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
 .text-content li {
   font-size: 1.5rem;
   list-style-type: none;
@@ -503,6 +535,7 @@ i:hover {
   padding: 25px;
   margin: 25px;
   width: 40rem;
+  height: 150px;
   display: flex;
   cursor: pointer;
   border: 2px solid white;
@@ -552,7 +585,7 @@ i:hover {
 .contact-me-container {
   max-width: 800px;
   margin: auto;
-  margin-top: 10rem;
+  margin-top: 20rem;
   padding-top: 100px;
 }
 
@@ -613,6 +646,7 @@ input {
   body {
     width: 100vw;
     overflow-x: hidden;
+    scroll-behavior: smooth;
   }
 
   .underline::after {
@@ -623,11 +657,9 @@ input {
   .css::after,
   .javascript::after,
   .wordpress::after,
-  .react::after {
-    display: none;
-  }
-
-  .certs::after {
+  .react::after,
+  .certs::after,
+  .skills::after {
     display: none;
   }
 
@@ -778,16 +810,36 @@ input {
     position: absolute;
     z-index: -2;
     backdrop-filter: blur(200px);
-     -webkit-backdrop-filter: blur(200px);
+    -webkit-backdrop-filter: blur(200px);
   }
 
   #blob,
   #blobtwo,
   #blobthree,
   #blobfour {
-    height: 300px;
+    height: 500px;
     aspect-ratio: 1;
     z-index: -3;
     position: absolute;
+  }
+  #blobtwo {
+    position: absolute;
+    right: 25%;
+    animation: rotate 20s infinite;
+    overflow-x: hidden;
+  }
+
+  #blobthree {
+    position: absolute;
+    left: 50%;
+    animation: rotate 20s infinite;
+    overflow-x: hidden;
+  }
+
+  #blobfour {
+    position: absolute;
+    left: 25%;
+    animation: rotate 20s infinite;
+    overflow-x: hidden;
   }
 }
