--- a/styles.css
+++ b/styles.css
@@ -185,12 +185,12 @@ a:visited {
     mediumpurple,
     rgb(194, 133, 3)
   );
-  animation: rotate 11s infinite;
+  animation: rotate 10s infinite;
   overflow: hidden;
 }
 
 #blur {
-  height: 100%;
+  height: 120%;
   width: 100vw;
   position: absolute;
   z-index: -2;
@@ -561,7 +561,7 @@ P {
 
 .projects-content {
   margin: auto;
-  width: 80%;
+  width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -681,6 +681,12 @@ input {
   cursor: crosshair;
 }
 
+@media screen and (max-width: 1500px) {
+  .contact-me-container {
+    margin-top: 70rem;
+  }
+}
+
 @media screen and (max-width: 1100px) {
   body {
     width: 100vw;
@@ -699,10 +705,10 @@ input {
     aspect-ratio: 1;
   }
 
-   .socials-container i {
+  .socials-container i {
     padding: 0;
   }
-  
+
   .underline::after {
     display: none;
   }
@@ -830,7 +836,7 @@ input {
   }
 
   .gmn-tile {
-    width: 20rem;
+    width: 40rem;
     height: 6rem;
     margin: 1rem;
     padding: 0;
@@ -895,5 +901,11 @@ input {
     left: 25%;
     animation: rotate 20s infinite;
     overflow-x: hidden;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .gmn-tile {
+    width: 20rem;
   }
 }
